@@ -32,6 +32,9 @@
 #include "../include/perfdata.h"
 #include "../include/broker.h"
 
+#ifdef USE_EVENT_BROKER
+#include "../include/neberrors.h"
+#endif
 
 extern int             enable_event_handlers;
 extern int             obsess_over_services;
@@ -251,6 +254,7 @@ int run_global_service_event_handler(service *svc){
 #ifdef USE_EVENT_BROKER
 	struct timeval start_time;
 	struct timeval end_time;
+	int neb_result=OK;
 #endif
 	int macro_options=STRIP_ILLEGAL_MACRO_CHARS|ESCAPE_MACRO_CHARS;
 
@@ -275,13 +279,6 @@ int run_global_service_event_handler(service *svc){
 	gettimeofday(&start_time,NULL);
 #endif
 
-#ifdef USE_EVENT_BROKER
-	/* send event data to broker */
-	end_time.tv_sec=0L;
-	end_time.tv_usec=0L;
-	broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,GLOBAL_SERVICE_EVENTHANDLER,(void *)svc,svc->current_state,svc->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,global_service_event_handler,NULL,NULL,NULL);
-#endif
-
 	/* get the raw command line */
 	get_raw_command_line(global_service_event_handler_ptr,global_service_event_handler,&raw_command,macro_options);
 	if(raw_command==NULL)
@@ -301,6 +298,22 @@ int run_global_service_event_handler(service *svc){
 		process_macros(raw_logentry,&processed_logentry,macro_options);
 		logit(NSLOG_EVENT_HANDLER,FALSE,processed_logentry);
 		}
+
+#ifdef USE_EVENT_BROKER
+	/* send event data to broker */
+	end_time.tv_sec=0L;
+	end_time.tv_usec=0L;
+	neb_result=broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,GLOBAL_SERVICE_EVENTHANDLER,(void *)svc,svc->current_state,svc->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,global_service_event_handler,processed_command,NULL,NULL);
+
+	/* neb module wants to override (or cancel) the event handler - perhaps it will run the eventhandler itself */
+	if(neb_result==NEBERROR_CALLBACKOVERRIDE) {
+		my_free(processed_command);
+		my_free(raw_command);
+		my_free(raw_logentry);
+		my_free(processed_logentry);
+		return OK;
+	}
+#endif
 
 	/* run the command */
 	result=my_system(processed_command,event_handler_timeout,&early_timeout,&exectime,&command_output,0);
@@ -344,6 +357,7 @@ int run_service_event_handler(service *svc){
 #ifdef USE_EVENT_BROKER
 	struct timeval start_time;
 	struct timeval end_time;
+	int neb_result=OK;
 #endif
 	int macro_options=STRIP_ILLEGAL_MACRO_CHARS|ESCAPE_MACRO_CHARS;
 
@@ -364,12 +378,6 @@ int run_service_event_handler(service *svc){
 	gettimeofday(&start_time,NULL);
 #endif
 
-#ifdef USE_EVENT_BROKER
-	/* send event data to broker */
-	end_time.tv_sec=0L;
-	end_time.tv_usec=0L;
-	broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,SERVICE_EVENTHANDLER,(void *)svc,svc->current_state,svc->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,svc->event_handler,NULL,NULL,NULL);
-#endif
 
 	/* get the raw command line */
 	get_raw_command_line(svc->event_handler_ptr,svc->event_handler,&raw_command,macro_options);
@@ -390,6 +398,22 @@ int run_service_event_handler(service *svc){
 		process_macros(raw_logentry,&processed_logentry,macro_options);
 		logit(NSLOG_EVENT_HANDLER,FALSE,processed_logentry);
 		}
+
+#ifdef USE_EVENT_BROKER
+	/* send event data to broker */
+	end_time.tv_sec=0L;
+	end_time.tv_usec=0L;
+	neb_result=broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,SERVICE_EVENTHANDLER,(void *)svc,svc->current_state,svc->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,svc->event_handler,processed_command,NULL,NULL);
+
+	/* neb module wants to override (or cancel) the event handler - perhaps it will run the eventhandler itself */
+	if(neb_result==NEBERROR_CALLBACKOVERRIDE) {
+		my_free(processed_command);
+		my_free(raw_command);
+		my_free(raw_logentry);
+		my_free(processed_logentry);
+		return OK;
+	}
+#endif
 
 	/* run the command */
 	result=my_system(processed_command,event_handler_timeout,&early_timeout,&exectime,&command_output,0);
@@ -476,6 +500,7 @@ int run_global_host_event_handler(host *hst){
 #ifdef USE_EVENT_BROKER
 	struct timeval start_time;
 	struct timeval end_time;
+	int neb_result=OK;
 #endif
 	int macro_options=STRIP_ILLEGAL_MACRO_CHARS|ESCAPE_MACRO_CHARS;
 
@@ -500,13 +525,6 @@ int run_global_host_event_handler(host *hst){
 	gettimeofday(&start_time,NULL);
 #endif
 
-#ifdef USE_EVENT_BROKER
-	/* send event data to broker */
-	end_time.tv_sec=0L;
-	end_time.tv_usec=0L;
-	broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,GLOBAL_HOST_EVENTHANDLER,(void *)hst,hst->current_state,hst->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,global_host_event_handler,NULL,NULL,NULL);
-#endif
-
 	/* get the raw command line */
 	get_raw_command_line(global_host_event_handler_ptr,global_host_event_handler,&raw_command,macro_options);
 	if(raw_command==NULL)
@@ -526,6 +544,22 @@ int run_global_host_event_handler(host *hst){
 		process_macros(raw_logentry,&processed_logentry,macro_options);
 		logit(NSLOG_EVENT_HANDLER,FALSE,processed_logentry);
 		}
+
+#ifdef USE_EVENT_BROKER
+	/* send event data to broker */
+	end_time.tv_sec=0L;
+	end_time.tv_usec=0L;
+	neb_result=broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,GLOBAL_HOST_EVENTHANDLER,(void *)hst,hst->current_state,hst->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,global_host_event_handler,processed_command,NULL,NULL);
+
+	/* neb module wants to override (or cancel) the event handler - perhaps it will run the eventhandler itself */
+	if(neb_result==NEBERROR_CALLBACKOVERRIDE) {
+		my_free(processed_command);
+		my_free(raw_command);
+		my_free(raw_logentry);
+		my_free(processed_logentry);
+		return OK;
+	}
+#endif
 
 	/* run the command */
 	result=my_system(processed_command,event_handler_timeout,&early_timeout,&exectime,&command_output,0);
@@ -568,6 +602,7 @@ int run_host_event_handler(host *hst){
 #ifdef USE_EVENT_BROKER
 	struct timeval start_time;
 	struct timeval end_time;
+	int neb_result=OK;
 #endif
 	int macro_options=STRIP_ILLEGAL_MACRO_CHARS|ESCAPE_MACRO_CHARS;
 
@@ -586,13 +621,6 @@ int run_host_event_handler(host *hst){
 #ifdef USE_EVENT_BROKER
 	/* get start time */
 	gettimeofday(&start_time,NULL);
-#endif
-
-#ifdef USE_EVENT_BROKER
-	/* send event data to broker */
-	end_time.tv_sec=0L;
-	end_time.tv_usec=0L;
-	broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,HOST_EVENTHANDLER,(void *)hst,hst->current_state,hst->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,hst->event_handler,NULL,NULL,NULL);
 #endif
 
 	/* get the raw command line */
@@ -614,6 +642,22 @@ int run_host_event_handler(host *hst){
 		process_macros(raw_logentry,&processed_logentry,macro_options);
 		logit(NSLOG_EVENT_HANDLER,FALSE,processed_logentry);
 		}
+
+#ifdef USE_EVENT_BROKER
+	/* send event data to broker */
+	end_time.tv_sec=0L;
+	end_time.tv_usec=0L;
+	neb_result=broker_event_handler(NEBTYPE_EVENTHANDLER_START,NEBFLAG_NONE,NEBATTR_NONE,HOST_EVENTHANDLER,(void *)hst,hst->current_state,hst->state_type,start_time,end_time,exectime,event_handler_timeout,early_timeout,result,hst->event_handler,processed_command,NULL,NULL);
+
+	/* neb module wants to override (or cancel) the event handler - perhaps it will run the eventhandler itself */
+	if(neb_result==NEBERROR_CALLBACKOVERRIDE) {
+		my_free(processed_command);
+		my_free(raw_command);
+		my_free(raw_logentry);
+		my_free(processed_logentry);
+		return OK;
+	}
+#endif
 
 	/* run the command */
 	result=my_system(processed_command,event_handler_timeout,&early_timeout,&exectime,&command_output,0);
@@ -780,5 +824,3 @@ int handle_host_state(host *hst){
 
 	return OK;
         }
-
-
