@@ -14,6 +14,7 @@ ENHANCEMENTS
 * Scheduled downtime can now start on SOFT error states (bug #47)
 * Main window frame URL can now be specify with a "corewindow=" parameter
 * Improved config CGI shows commands, command args in an easier to use manner (Jochen Bern)
+* Added ability for NEB modules to override execution of event handlers (Sven Nierlein)
 
 FIXES
 * Fix for choosing next valid time on day of DST change when clocks go one hour backwards
